# LEAD_GENERATION_CHATBOT

./: README.md  config.py  main.py  pyproject.toml  requirements.txt
chatbot/: conversation_flow.py  core.py  lead_management.py
data/: leads.csv  properties.csv
database/: data_loader.py  qdrant_connector.py  redis_connector.py
utils/: email_reporter.py  embeddings.py
